--- a/stylus/layout/hero.styl
+++ b/stylus/layout/hero.styl
@@ -2,6 +2,7 @@
   margin 1rem 0
   display: flex
   justify-content: space-between
+  align-items: center
 
   .blogTitle 
     display: inline
@@ -9,7 +10,7 @@
     text-underline-offset: 6px
 
 .heroLogo 
-  width: 13%
+  width: clamp(100px, 133px, 20%)
   border-radius: 0.25rem
 
 .heroHeader 
